salesforce_sfdx/main/default/objects/eos_Offline_Data_Upload_Chunk__c/eos_Offline_Data_Upload_Chunk__c.object-meta.xml
<CustomObject>
    <description>[EoS] The object is used to support batch (offline) data upload from the EoS application for ultra-heavy data loads</description>
    <label>Offline Data Upload Chunk</label>
    <nameField>
        <label>Offline Data Upload Chunk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offline Data Upload Chunks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>