salesforce_sfdx/main/default/objects/eos_Offline_Data_Upload_Chunk__c/fields/eos_Data_Content__c.field-meta.xml
<CustomField>
    <fullName>eos_Data_Content__c</fullName>
    <label>Data Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>