salesforce_sfdx/main/default/objects/eos_Offline_Data_Upload_Chunk__c/fields/eos_Processing_Details__c.field-meta.xml
<CustomField>
    <fullName>eos_Processing_Details__c</fullName>
    <label>Processing Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>